--- a/static/css/univers-55.css
+++ b/static/css/univers-55.css
@@ -2,12 +2,12 @@
 
 @font-face {
     font-family: 'univers55';
-    src: url('univers-55.eot');
-    src: url('univers-55.eot?#iefix') format('embedded-opentype'),
-         url('univers-55.woff2') format('woff2'),
-         url('univers-55.woff') format('woff'),
-         url('univers-55.ttf') format('truetype'),
-         url('univers-55.svg#univers55') format('svg');
+    src: url('../fonts/univers/univers-55.eot');
+    src: url('../fonts/univers/univers-55.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/univers/univers-55.woff2') format('woff2'),
+         url('../fonts/univers/univers-55.woff') format('woff'),
+         url('../fonts/univers/univers-55.ttf') format('truetype'),
+         url('../fonts/univers/univers-55.svg#univers55') format('svg');
     font-weight: normal;
     font-style: normal;
 }
