--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,6 +18,8 @@ body {
 	line-height: 22px;	
 	-webkit-font-smoothing: subpixel-antialiased;
 	-webkit-text-size-adjust: 100%;
+	background-color: #000;
+	color: #FFF;
 }
 
 p {
@@ -38,7 +40,7 @@ a:link,
 a:visited {
     color: #F00;
     text-decoration: none;
-    border-bottom: 1px solid #F00;
+    /* border-bottom: 1px solid #F00; */
 }
 
 a:hover {
